[WTEL-4150]: added conversation linking to the contact
